优化页面处理
