# src/api/index.ts
@@ -11,15 +11,18 @@ export { BookmarkCreateRequest } from './models/BookmarkCreateRequest';
 export type { BookmarkDeleteRequest } from './models/BookmarkDeleteRequest';
 export type { BookmarkGetRequest } from './models/BookmarkGetRequest';
 export { BookmarkListRequest } from './models/BookmarkListRequest';
+export type { BookmarkListResult } from './models/BookmarkListResult';
+export { BookmarkResponse } from './models/BookmarkResponse';
+export type { BookmarkSingleResult } from './models/BookmarkSingleResult';
 export { BookmarkUpdateRequest } from './models/BookmarkUpdateRequest';
 export type { GenericResult } from './models/GenericResult';
 export type { MemoCreateRequest } from './models/MemoCreateRequest';
 export type { MemoDeleteRequest } from './models/MemoDeleteRequest';
 export type { MemoPageRequest } from './models/MemoPageRequest';
-export type { MemoResponse } from './models/MemoResponse';
-export type { MemoTagDomain } from './models/MemoTagDomain';
 export type { MemoUpdateRequest } from './models/MemoUpdateRequest';
 export type { PageableRequest } from './models/PageableRequest';
-export type { PageableResult } from './models/PageableResult';
+export type { StringResult } from './models/StringResult';
+export type { UserInfoResponse } from './models/UserInfoResponse';
+export type { UserInfoSingleResult } from './models/UserInfoSingleResult';
 
 export { Service } from './services/Service';
