# src/docs/openapi.json
@@ -100,7 +100,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenericResult"
+                  "$ref": "#/components/schemas/UserInfoSingleResult"
                 }
               }
             }
@@ -128,9 +128,9 @@
         },
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "更新成功",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/GenericResult"
                 }
@@ -150,9 +150,9 @@
         "operationId": "memoTags",
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "查询成功",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/GenericResult"
                 }
@@ -182,11 +182,11 @@
         },
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "查询成功",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PageableResult"
+                  "$ref": "#/components/schemas/GenericResult"
                 }
               }
             }
@@ -214,9 +214,9 @@
         },
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "删除成功",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/GenericResult"
                 }
@@ -246,9 +246,9 @@
         },
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "新增成功",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/GenericResult"
                 }
@@ -282,7 +282,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenericResult"
+                  "$ref": "#/components/schemas/StringResult"
                 }
               }
             }
@@ -304,7 +304,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenericResult"
+                  "$ref": "#/components/schemas/BookmarkListResult"
                 }
               }
             }
@@ -340,7 +340,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenericResult"
+                  "$ref": "#/components/schemas/StringResult"
                 }
               }
             }
@@ -362,7 +362,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenericResult"
+                  "$ref": "#/components/schemas/BookmarkListResult"
                 }
               }
             }
@@ -394,7 +394,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenericResult"
+                  "$ref": "#/components/schemas/BookmarkListResult"
                 }
               }
             }
@@ -426,7 +426,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenericResult"
+                  "$ref": "#/components/schemas/BookmarkSingleResult"
                 }
               }
             }
@@ -458,7 +458,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenericResult"
+                  "$ref": "#/components/schemas/StringResult"
                 }
               }
             }
@@ -490,7 +490,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/GenericResult"
+                  "$ref": "#/components/schemas/StringResult"
                 }
               }
             }
@@ -501,9 +501,35 @@
   },
   "components": {
     "schemas": {
-      "GenericResult": {
+      "UserInfoResponse": {
         "type": "object",
-        "description": "通用响应对象",
+        "description": "用户信息",
+        "properties": {
+          "username": {
+            "type": "string",
+            "description": "用户名称"
+          },
+          "permissions": {
+            "type": "array",
+            "description": "权限集合",
+            "items": {
+              "type": "string"
+            },
+            "uniqueItems": true
+          },
+          "roles": {
+            "type": "array",
+            "description": "角色集合",
+            "items": {
+              "type": "string"
+            },
+            "uniqueItems": true
+          }
+        }
+      },
+      "UserInfoSingleResult": {
+        "type": "object",
+        "description": "用户信息单个返回结果",
         "properties": {
           "code": {
             "type": "integer",
@@ -515,6 +541,7 @@
             "description": "错误信息"
           },
           "data": {
+            "$ref": "#/components/schemas/UserInfoResponse",
             "description": "响应数据"
           }
         }
@@ -565,6 +592,24 @@
           "title"
         ]
       },
+      "GenericResult": {
+        "type": "object",
+        "description": "通用响应对象",
+        "properties": {
+          "code": {
+            "type": "integer",
+            "format": "int32",
+            "description": "错误代码"
+          },
+          "message": {
+            "type": "string",
+            "description": "错误信息"
+          },
+          "data": {
+            "description": "响应数据"
+          }
+        }
+      },
       "MemoPageRequest": {
         "type": "object",
         "description": "备忘分页请求",
@@ -593,127 +638,6 @@
           "query": {
             "$ref": "#/components/schemas/MemoPageRequest",
             "description": "查询条件"
-          }
-        }
-      },
-      "MemoResponse": {
-        "type": "object",
-        "description": "备忘详情响应",
-        "properties": {
-          "title": {
-            "type": "string"
-          },
-          "subTitle": {
-            "type": "string",
-            "description": "副备忘标题"
-          },
-          "content": {
-            "type": "string",
-            "description": "备忘内容"
-          },
-          "tags": {
-            "type": "array",
-            "description": "备忘关联标签对象列表",
-            "items": {
-              "$ref": "#/components/schemas/MemoTagDomain"
-            }
-          },
-          "tagIds": {
-            "type": "array",
-            "description": "备忘关联标签列表",
-            "items": {
-              "type": "integer",
-              "format": "int64"
-            }
-          },
-          "orderNumber": {
-            "type": "integer",
-            "format": "int32",
-            "description": "书签排序"
-          },
-          "createTime": {
-            "type": "string",
-            "format": "date-time",
-            "description": "创建时间"
-          },
-          "updateTime": {
-            "type": "string",
-            "format": "date-time",
-            "description": "更新时间"
-          }
-        },
-        "required": [
-          "title"
-        ]
-      },
-      "MemoTagDomain": {
-        "type": "object",
-        "description": "备忘标签领域对象",
-        "properties": {
-          "ID": {
-            "type": "integer",
-            "format": "int64",
-            "description": "主键ID"
-          },
-          "createTime": {
-            "type": "string",
-            "format": "date-time",
-            "description": "创建时间"
-          },
-          "updateTime": {
-            "type": "string",
-            "format": "date-time",
-            "description": "更新时间"
-          },
-          "orderNumber": {
-            "type": "integer",
-            "format": "int32",
-            "description": "排序值"
-          },
-          "title": {
-            "type": "string",
-            "description": "备忘标签标题"
-          },
-          "icon": {
-            "type": "string",
-            "description": "备忘标签图标"
-          }
-        }
-      },
-      "PageableResult": {
-        "type": "object",
-        "description": "分页响应对象",
-        "properties": {
-          "code": {
-            "type": "integer",
-            "format": "int32",
-            "description": "错误代码"
-          },
-          "message": {
-            "type": "string",
-            "description": "错误信息"
-          },
-          "pageNo": {
-            "type": "integer",
-            "format": "int32",
-            "description": "分页页码"
-          },
-          "pageSize": {
-            "type": "integer",
-            "format": "int32",
-            "description": "分页大小"
-          },
-          "total": {
-            "type": "integer",
-            "format": "int64",
-            "description": "总计"
-          },
-          "data": {
-            "type": "array",
-            "description": "响应数据",
-            "items": {
-              "$ref": "#/components/schemas/MemoResponse"
-            }
           }
         }
       },
@@ -816,6 +740,109 @@
           "url"
         ]
       },
+      "StringResult": {
+        "type": "object",
+        "description": "字符串返回结果",
+        "properties": {
+          "code": {
+            "type": "integer",
+            "format": "int32",
+            "description": "错误代码"
+          },
+          "message": {
+            "type": "string",
+            "description": "错误信息"
+          },
+          "data": {
+            "type": "string",
+            "description": "响应数据"
+          }
+        }
+      },
+      "BookmarkListResult": {
+        "type": "object",
+        "description": "书签列表返回结果",
+        "properties": {
+          "code": {
+            "type": "integer",
+            "format": "int32",
+            "description": "错误代码"
+          },
+          "message": {
+            "type": "string",
+            "description": "错误信息"
+          },
+          "total": {
+            "type": "integer",
+            "format": "int64",
+            "description": "总计"
+          },
+          "data": {
+            "type": "array",
+            "description": "响应数据",
+            "items": {
+              "$ref": "#/components/schemas/BookmarkResponse"
+            }
+          }
+        }
+      },
+      "BookmarkResponse": {
+        "type": "object",
+        "description": "书签领域对象",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64",
+            "description": "主键ID"
+          },
+          "createTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "创建时间"
+          },
+          "updateTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "更新时间"
+          },
+          "orderNumber": {
+            "type": "integer",
+            "format": "int32",
+            "description": "排序值"
+          },
+          "name": {
+            "type": "string",
+            "description": "书签名称"
+          },
+          "type": {
+            "type": "string",
+            "description": "书签类型",
+            "enum": [
+              "FOLDER",
+              "ITEM"
+            ]
+          },
+          "url": {
+            "type": "string",
+            "description": "书签地址"
+          },
+          "icon": {
+            "type": "string",
+            "description": "书签图标"
+          },
+          "color": {
+            "type": "string",
+            "description": "书签颜色"
+          },
+          "children": {
+            "type": "array",
+            "description": "子级",
+            "items": {
+              "$ref": "#/components/schemas/BookmarkResponse"
+            }
+          }
+        }
+      },
       "BookmarkListRequest": {
         "type": "object",
         "description": "书签列表请求",
@@ -856,6 +883,25 @@
         "required": [
           "id"
         ]
+      },
+      "BookmarkSingleResult": {
+        "type": "object",
+        "description": "书签单个返回结果",
+        "properties": {
+          "code": {
+            "type": "integer",
+            "format": "int32",
+            "description": "错误代码"
+          },
+          "message": {
+            "type": "string",
+            "description": "错误信息"
+          },
+          "data": {
+            "$ref": "#/components/schemas/BookmarkResponse",
+            "description": "响应数据"
+          }
+        }
       },
       "BookmarkDeleteRequest": {
         "type": "object",
